syntax = "proto3";

package vcassist.services.student_data.v1;

enum AssignmentState {
  ASSIGNMENT_STATE_UNSPECIFIED = 0;
  ASSIGNMENT_STATE_MISSING = 1;
  ASSIGNMENT_STATE_INCOMPLETE = 2;
  ASSIGNMENT_STATE_SUBMITTED = 3;
  ASSIGNMENT_STATE_LATE = 4;
  ASSIGNMENT_STATE_EXEMPT = 5;
}

message Assignment {
  string name = 1;

  int64 time = 2;
  string description = 3;
  AssignmentState state = 4;
  float scored = 5;
  float total = 6;
  string assignment_type_name = 7;
}

message CourseMeeting {
  int64 start_time = 1;
  int64 end_time = 2;
}

message AssignmentType {
  string name = 1;
  float weight = 2;
}

message GradeSnapshot {
  int64 time = 1;
  float value = 2;
}

message Course {
  string name = 1;

  float overall_grade = 2;
  string teacher = 3;
  string teacher_email = 4;
  string remote_meeting_link = 5;
  string room = 6;
  string day_name = 7;
  int32 homework_passes = 8;

  repeated CourseMeeting meetings = 9;
  repeated AssignmentType assignment_types = 10;
  repeated Assignment assignments = 11;
  repeated GradeSnapshot snapshots = 12;
  string lesson_plan = 13;
}

message StudentData {
  float gpa = 1;
  repeated string day_names = 2;
  repeated Course courses = 3;
  string current_day = 4;
}
